5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1618_2924.log
== SUBMITION (2019-04-02 11:16:13) 
-- CODE:
so=int(input());
velocidade=int(input());
temp=int(input());

resultado=so+v*t;

print(resultado);
-- EXECUTION TIME:
0.148287
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2924/main.py", line 5, in <module>
    resultado=so+v*t;
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:16:19) 
-- CODE:
so=int(input());
velocidade=int(input());
temp=int(input());

resultado=so+v*t;

print(resultado);
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    resultado=so+v*t;
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:16:55) 
-- CODE:
so=int(input());
v=int(input());
t=int(input());

resultado=so+v*t;

print(resultado);
-- OUTPUT:
3002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:17:05) 
-- CODE:
so=int(input());
v=int(input());
t=int(input());

resultado=so+v*t;

print(resultado);
-- EXECUTION TIME:
0.131854
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
3002
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
4252
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
3058
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
